Major revision of start_server2.sh